--- a/backend/scripts/service/XiHan.App.service
+++ b/backend/scripts/service/XiHan.App.service
@@ -2,12 +2,12 @@
 Description=XiHan
 
 [Service]
-WorkingDirectory=/home/XiHan.App.Admin/
-ExecStart=/usr/bin/dotnet /home/XiHan.App.Admin/XiHan.WebHost.dll --urls="http//*:9708" --ip="127.0.0.1"
+WorkingDirectory=/home/XiHan.App/
+ExecStart=/usr/bin/dotnet /home/XiHan.App/XiHan.App.WebHost.dll --urls="http//*:9708" --ip="127.0.0.1"
 Restart=always
 RestartSec=10
 KillSignal=SIGINT
-SyslogIdentifier=XiHan.App.Admin
+SyslogIdentifier=XiHan.App
 User=root
 Environment=ASPNETCORE_ENVIRONMENT=Production
 Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false
