--- a/backend/props/common.props
+++ b/backend/props/common.props
@@ -34,11 +34,11 @@
     <!-- 定义 NuGet 包的标签 -->
     <PackageTags>csharp aspnetcore web webapp xihan app admin zhaifanhua xihanfun</PackageTags>
     <!-- NuGet 包输出路径 -->
-    <PackageOutputPath>..\..\nupkgs</PackageOutputPath>
+    <PackageOutputPath>..\..\..\nupkgs</PackageOutputPath>
     <!-- 程序集签名 -->
     <SignAssembly>True</SignAssembly>
     <!-- 指定用于签名的密钥文件 -->
-    <AssemblyOriginatorKeyFile>..\..\snks\XiHan.App.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\..\..\snks\XiHan.App.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <!-- 引用 NuGet 包 -->
   <ItemGroup>
@@ -48,19 +48,19 @@
   <ItemGroup>
     <!-- 将 readme.png 作为 NuGet 包图标 -->
     <None
-      Include="..\..\nuget\readme.png">
+      Include="..\..\..\nuget\readme.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
     <!-- 将 readme.md 作为 None 类型文件包含在 NuGet 包中 -->
     <None
-      Include="..\..\nuget\readme.md">
+      Include="..\..\..\nuget\readme.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
     <!-- 将 LICENSE 文件包含在 NuGet 包中 -->
     <None
-      Include="..\..\nuget\LICENSE">
+      Include="..\..\..\nuget\LICENSE">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
