--- a/backend/src/modules/XiHan.App.Rbac.Application.Contracts/XiHan.App.Rbac.Application.Contracts.csproj
+++ b/backend/src/modules/XiHan.App.Rbac.Application.Contracts/XiHan.App.Rbac.Application.Contracts.csproj
@@ -11,4 +11,8 @@
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="XiHan.Framework.Ddd.Application.Contracts" Version="0.8.1" />
+	</ItemGroup>
+
 </Project>
