--- a/backend/src/modules/XiHan.App.Rbac.Domain/XiHan.App.Rbac.Domain.csproj
+++ b/backend/src/modules/XiHan.App.Rbac.Domain/XiHan.App.Rbac.Domain.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<Import Project="..\..\..\props\common.props"/>
-	<Import Project="..\..\..\props\version.props"/>
+	<Import Project="..\..\..\props\common.props" />
+	<Import Project="..\..\..\props\version.props" />
 
 	<PropertyGroup>
 		<Title>XiHan.App.Rbac.Domain</Title>
@@ -10,5 +10,9 @@
 		<Description>曦寒应用角色控制领域库</Description>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="XiHan.Framework.Ddd.Domain" Version="0.8.1" />
+	</ItemGroup>
 
 </Project>
