--- a/backend/src/modules/XiHan.App.CodeGeneration.Application/XiHan.App.CodeGeneration.Application.csproj
+++ b/backend/src/modules/XiHan.App.CodeGeneration.Application/XiHan.App.CodeGeneration.Application.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<Import Project="..\..\..\props\common.props"/>
-	<Import Project="..\..\..\props\version.props"/>
+	<Import Project="..\..\..\props\common.props" />
+	<Import Project="..\..\..\props\version.props" />
 
 	<PropertyGroup>
 		<Title>XiHan.App.CodeGeneration.Application</Title>
@@ -10,5 +10,14 @@
 		<Description>曦寒应用代码生成应用库</Description>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="XiHan.Framework.CodeGeneration" Version="0.8.2" />
+		<PackageReference Include="XiHan.Framework.Ddd.Application" Version="0.8.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\main\XiHan.App.Application.Contracts\XiHan.App.Application.Contracts.csproj" />
+	</ItemGroup>
 
 </Project>
