--- a/backend/src/modules/XiHan.App.CodeGeneration.Domain/XiHan.App.CodeGeneration.Domain.csproj
+++ b/backend/src/modules/XiHan.App.CodeGeneration.Domain/XiHan.App.CodeGeneration.Domain.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<Import Project="..\..\..\props\common.props"/>
-	<Import Project="..\..\..\props\version.props"/>
+	<Import Project="..\..\..\props\common.props" />
+	<Import Project="..\..\..\props\version.props" />
 
 	<PropertyGroup>
 		<Title>XiHan.App.CodeGeneration.Domain</Title>
@@ -10,5 +10,13 @@
 		<Description>曦寒应用代码生成领域库</Description>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="XiHan.Framework.Ddd.Domain" Version="0.8.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\XiHan.App.CodeGeneration.Domain.Shared\XiHan.App.CodeGeneration.Domain.Shared.csproj" />
+	</ItemGroup>
 
 </Project>
