--- a/backend/src/modules/XiHan.App.Rbac.Application.Contracts/XiHan.App.Rbac.Application.Contracts.csproj
+++ b/backend/src/modules/XiHan.App.Rbac.Application.Contracts/XiHan.App.Rbac.Application.Contracts.csproj
@@ -12,7 +12,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="XiHan.Framework.Ddd.Application.Contracts" Version="0.8.1" />
+	  <PackageReference Include="XiHan.Framework.Ddd.Application.Contracts" Version="0.8.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\main\XiHan.App.Domain.Shared\XiHan.App.Domain.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
