--- a/backend/src/main/XiHan.BasicApp.Application/XiHan.BasicApp.Application.csproj
+++ b/backend/src/main/XiHan.BasicApp.Application/XiHan.BasicApp.Application.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<Import Project="..\..\..\props\common.props"/>
-	<Import Project="..\..\..\props\version.props"/>
+	<Import Project="..\..\..\props\common.props" />
+	<Import Project="..\..\..\props\version.props" />
 
 	<PropertyGroup>
 		<Title>XiHan.BasicApp.Application</Title>
@@ -10,5 +10,16 @@
 		<Description>曦寒基础应用应用库</Description>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="XiHan.Framework.Ddd.Application" Version="0.8.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\modules\XiHan.BasicApp.CodeGeneration.Application\XiHan.BasicApp.CodeGeneration.Application.csproj" />
+	  <ProjectReference Include="..\..\modules\XiHan.BasicApp.Rbac.Application\XiHan.BasicApp.Rbac.Application.csproj" />
+	  <ProjectReference Include="..\XiHan.BasicApp.Application.Contracts\XiHan.BasicApp.Application.Contracts.csproj" />
+	  <ProjectReference Include="..\XiHan.BasicApp.Domain\XiHan.BasicApp.Domain.csproj" />
+	</ItemGroup>
 
 </Project>
