--- a/backend/src/main/XiHan.BasicApp.Domain.Shared/XiHan.BasicApp.Domain.Shared.csproj
+++ b/backend/src/main/XiHan.BasicApp.Domain.Shared/XiHan.BasicApp.Domain.Shared.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<Import Project="..\..\..\props\common.props"/>
-	<Import Project="..\..\..\props\version.props"/>
+	<Import Project="..\..\..\props\common.props" />
+	<Import Project="..\..\..\props\version.props" />
 
 	<PropertyGroup>
 		<Title>XiHan.BasicApp.Domain.Shared</Title>
@@ -10,5 +10,14 @@
 		<Description>曦寒基础应用领域共享库</Description>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="XiHan.Framework.Ddd.Domain.Shared" Version="0.8.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\modules\XiHan.BasicApp.CodeGeneration.Domain.Shared\XiHan.BasicApp.CodeGeneration.Domain.Shared.csproj" />
+	  <ProjectReference Include="..\..\modules\XiHan.BasicApp.Rbac.Domain.Shared\XiHan.BasicApp.Rbac.Domain.Shared.csproj" />
+	</ItemGroup>
 
 </Project>
