--- a/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
+++ b/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-	<Import Project="..\..\..\props\common.props"/>
-	<Import Project="..\..\..\props\version.props"/>
+	<Import Project="..\..\..\props\common.props" />
+	<Import Project="..\..\..\props\version.props" />
 
 	<PropertyGroup>
 		<Title>XiHan.BasicApp.WebHost</Title>
@@ -11,5 +11,13 @@
 		<IsPackable>true</IsPackable>
 		<OutputType>Exe</OutputType>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="XiHan.Framework.AspNetCore" Version="0.8.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\XiHan.BasicApp.Application\XiHan.BasicApp.Application.csproj" />
+	</ItemGroup>
 
 </Project>
