--- a/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
+++ b/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-    <Import Project="..\..\..\props\common.props"/>
-    <Import Project="..\..\..\props\version.props"/>
+    <Import Project="..\..\..\props\common.props" />
+    <Import Project="..\..\..\props\version.props" />
 
     <PropertyGroup>
         <Title>XiHan.BasicApp.WebHost</Title>
@@ -13,11 +13,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="XiHan.Framework.AspNetCore" Version="0.8.5"/>
+        <PackageReference Include="XiHan.Framework.AspNetCore.Authentication.JwtBearer" Version="0.8.5" />
+        <PackageReference Include="XiHan.Framework.AspNetCore.Authentication.OAuth" Version="0.8.5" />
+        <PackageReference Include="XiHan.Framework.AspNetCore.Mvc" Version="0.8.5" />
+        <PackageReference Include="XiHan.Framework.AspNetCore.Scalar" Version="0.8.5" />
+        <PackageReference Include="XiHan.Framework.AspNetCore.Swagger" Version="0.8.5" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\XiHan.BasicApp.Application\XiHan.BasicApp.Application.csproj"/>
+        <ProjectReference Include="..\XiHan.BasicApp.Application\XiHan.BasicApp.Application.csproj" />
     </ItemGroup>
 
 </Project>
