--- a/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
+++ b/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
@@ -10,14 +10,15 @@
         <Description>曦寒基础应用 Web 主机</Description>
         <IsPackable>true</IsPackable>
         <OutputType>Exe</OutputType>
+        <GenerateDocumentationFile>True</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="XiHan.Framework.AspNetCore.Authentication.JwtBearer" Version="0.8.5" />
-        <PackageReference Include="XiHan.Framework.AspNetCore.Authentication.OAuth" Version="0.8.5" />
-        <PackageReference Include="XiHan.Framework.AspNetCore.Mvc" Version="0.8.5" />
-        <PackageReference Include="XiHan.Framework.AspNetCore.Scalar" Version="0.8.5" />
-        <PackageReference Include="XiHan.Framework.AspNetCore.Swagger" Version="0.8.5" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.JwtBearer" Version="0.8.5" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.OAuth" Version="0.8.5" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Mvc" Version="0.8.5" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Scalar" Version="0.8.5" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Swagger" Version="0.8.5" />
     </ItemGroup>
 
     <ItemGroup>
