--- a/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
+++ b/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
@@ -14,11 +14,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.JwtBearer" Version="0.8.12" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.OAuth" Version="0.8.12" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Mvc" Version="0.8.12" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Scalar" Version="0.8.12" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Swagger" Version="0.8.12" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.JwtBearer" Version="0.8.13-rc.4" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.OAuth" Version="0.8.13-rc.4" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Mvc" Version="0.8.13-rc.4" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Scalar" Version="0.8.13-rc.4" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Swagger" Version="0.8.13-rc.4" />
     </ItemGroup>
 
     <ItemGroup>
