--- a/backend/src/modules/XiHan.BasicApp.CodeGeneration.Application.Contracts/XiHan.BasicApp.CodeGeneration.Application.Contracts.csproj
+++ b/backend/src/modules/XiHan.BasicApp.CodeGeneration.Application.Contracts/XiHan.BasicApp.CodeGeneration.Application.Contracts.csproj
@@ -12,7 +12,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="XiHan.Framework.Ddd.Application.Contracts" Version="0.8.12" />
+        <PackageReference Include="XiHan.Framework.Ddd.Application.Contracts" Version="0.8.13-rc.4" />
     </ItemGroup>
 
     <ItemGroup>
