--- a/backend/src/modules/XiHan.BasicApp.CodeGeneration.Application/XiHan.BasicApp.CodeGeneration.Application.csproj
+++ b/backend/src/modules/XiHan.BasicApp.CodeGeneration.Application/XiHan.BasicApp.CodeGeneration.Application.csproj
@@ -12,8 +12,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="XiHan.Framework.CodeGeneration" Version="0.8.12" />
-        <PackageReference Include="XiHan.Framework.Ddd.Application" Version="0.8.12" />
+        <PackageReference Include="XiHan.Framework.CodeGeneration" Version="0.8.13-rc.4" />
+        <PackageReference Include="XiHan.Framework.Ddd.Application" Version="0.8.13-rc.4" />
     </ItemGroup>
 
     <ItemGroup>
