--- a/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
+++ b/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-    <Import Project="..\..\..\props\common.props" />
+    <Import Project="..\..\..\props\net.props" />
+    <Import Project="..\..\..\props\nuget.props" />
     <Import Project="..\..\..\props\version.props" />
 
     <PropertyGroup>
@@ -14,14 +15,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.JwtBearer" Version="0.8.13-rc.4" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.OAuth" Version="0.8.13-rc.4" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Mvc" Version="0.8.13-rc.4" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Scalar" Version="0.8.13-rc.4" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Swagger" Version="0.8.13-rc.4" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.JwtBearer" Version="0.8.16" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.OAuth" Version="0.8.16" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Mvc" Version="0.8.16" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Scalar" Version="0.8.16" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Swagger" Version="0.8.16" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\framework\XiHan.BasicApp.AspNetCore\XiHan.BasicApp.AspNetCore.csproj" />
         <ProjectReference Include="..\XiHan.BasicApp.Application\XiHan.BasicApp.Application.csproj" />
     </ItemGroup>
 
