--- a/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
+++ b/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
@@ -1,25 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-    <Import Project="..\..\..\props\net.props" />
-    <Import Project="..\..\..\props\nuget.props" />
+    <Import Project="..\..\..\props\netcore.props" />
+    <Import Project="..\..\..\props\common.props" />
     <Import Project="..\..\..\props\version.props" />
+    <Import Project="..\..\..\props\nuget.props" />
 
     <PropertyGroup>
         <Title>XiHan.BasicApp.WebHost</Title>
         <AssemblyName>XiHan.BasicApp.WebHost</AssemblyName>
         <PackageId>XiHan.BasicApp.WebHost</PackageId>
         <Description>曦寒基础应用 Web 主机</Description>
-        <IsPackable>true</IsPackable>
         <OutputType>Exe</OutputType>
-        <GenerateDocumentationFile>True</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.JwtBearer" Version="0.8.17" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.OAuth" Version="0.8.17" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Mvc" Version="0.8.17" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Scalar" Version="0.8.17" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Swagger" Version="0.8.17" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.JwtBearer" Version="0.8.18" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.OAuth" Version="0.8.18" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Mvc" Version="0.8.18" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Scalar" Version="0.8.18" />
+		<PackageReference Include="XiHan.Framework.AspNetCore.Swagger" Version="0.8.18" />
     </ItemGroup>
 
     <ItemGroup>
