--- a/backend/src/modules/XiHan.BasicApp.CodeGeneration.Application/XiHan.BasicApp.CodeGeneration.Application.csproj
+++ b/backend/src/modules/XiHan.BasicApp.CodeGeneration.Application/XiHan.BasicApp.CodeGeneration.Application.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Import Project="..\..\..\props\net.props" />
-    <Import Project="..\..\..\props\nuget.props" />
+    <Import Project="..\..\..\props\netcore.props" />
+    <Import Project="..\..\..\props\common.props" />
     <Import Project="..\..\..\props\version.props" />
+    <Import Project="..\..\..\props\nuget.props" />
 
     <PropertyGroup>
         <Title>XiHan.BasicApp.CodeGeneration.Application</Title>
@@ -13,8 +14,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="XiHan.Framework.CodeGeneration" Version="0.8.17" />
-        <PackageReference Include="XiHan.Framework.Ddd.Application" Version="0.8.17" />
+        <PackageReference Include="XiHan.Framework.CodeGeneration" Version="0.8.18" />
+        <PackageReference Include="XiHan.Framework.Ddd.Application" Version="0.8.18" />
     </ItemGroup>
 
     <ItemGroup>
