--- a/backend/src/modules/XiHan.BasicApp.Rbac.Domain/XiHan.BasicApp.Rbac.Domain.csproj
+++ b/backend/src/modules/XiHan.BasicApp.Rbac.Domain/XiHan.BasicApp.Rbac.Domain.csproj
@@ -14,7 +14,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="XiHan.Framework.Ddd.Domain" Version="0.8.20" />
+        <PackageReference Include="XiHan.Framework.Ddd.Domain" Version="0.8.21-preview" />
     </ItemGroup>
 
     <ItemGroup>
