--- a/backend/src/main/XiHan.BasicApp.WebHost/Properties/launchSettings.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/Properties/launchSettings.json
@@ -1,25 +1,11 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://127.0.0.1:9708",
-      "sslPort": 0
-    }
-  },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "Development": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "http://127.0.0.1:9708",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -29,6 +15,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "http://127.0.0.1:9708",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Test"
       },
@@ -37,29 +24,11 @@
     "Production": {
       "commandName": "Project",
       "applicationUrl": "http://127.0.0.1:9708",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       },
       "dotnetRunMessages": true
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "http://127.0.0.1:9708"
-      },
-      "publishAllPorts": true,
-      "dockerOptions": {
-        "image": "xihanbasicapp",
-        "ports": [
-          {
-            "hostPort": 9708,
-            "containerPort": 9708
-          }
-        ]
-      }
     }
   }
 }
