--- a/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
+++ b/backend/src/main/XiHan.BasicApp.WebHost/XiHan.BasicApp.WebHost.csproj
@@ -14,16 +14,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.JwtBearer" Version="0.8.21-preview" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Authentication.OAuth" Version="0.8.21-preview" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Mvc" Version="0.8.21-preview" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Scalar" Version="0.8.21-preview" />
-		<PackageReference Include="XiHan.Framework.AspNetCore.Swagger" Version="0.8.21-preview" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\..\framework\XiHan.BasicApp.AspNetCore\XiHan.BasicApp.AspNetCore.csproj" />
-        <ProjectReference Include="..\XiHan.BasicApp.Application\XiHan.BasicApp.Application.csproj" />
+      <ProjectReference Include="..\..\modules\XiHan.BasicApp.Rbac.Application\XiHan.BasicApp.Rbac.Application.csproj" />
     </ItemGroup>
 
 </Project>
