--- a/backend/src/modules/XiHan.BasicApp.Rbac.Domain.Shared/XiHan.BasicApp.Rbac.Domain.Shared.csproj
+++ b/backend/src/modules/XiHan.BasicApp.Rbac.Domain.Shared/XiHan.BasicApp.Rbac.Domain.Shared.csproj
@@ -14,7 +14,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="XiHan.Framework.Ddd.Domain.Shared" Version="0.8.21-preview" />
+      <ProjectReference Include="..\..\framework\XiHan.BasicApp.AspNetCore\XiHan.BasicApp.AspNetCore.csproj" />
     </ItemGroup>
 
 </Project>
