--- a/backend/src/framework/XiHan.BasicApp.Core/XiHan.BasicApp.Core.csproj
+++ b/backend/src/framework/XiHan.BasicApp.Core/XiHan.BasicApp.Core.csproj
@@ -25,6 +25,7 @@
       <PackageReference Include="XiHan.Framework.Caching.StackExchangeRedis" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.CodeGeneration" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.Core" Version="0.8.28" />
+      <PackageReference Include="XiHan.Framework.Data" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.Ddd.Application" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.Ddd.Application.Contracts" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.Ddd.Domain" Version="0.8.28" />
@@ -32,6 +33,7 @@
       <PackageReference Include="XiHan.Framework.EventBus" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.Gateway" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.Http" Version="0.8.28" />
+      <PackageReference Include="XiHan.Framework.Http.Client" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.Localization" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.MultiTenancy" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.ObjectMapping.Mapster" Version="0.8.28" />
@@ -39,6 +41,7 @@
       <PackageReference Include="XiHan.Framework.Security" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.Serialization" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.Settings" Version="0.8.28" />
+      <PackageReference Include="XiHan.Framework.SqlSugarCore" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.TextTemplating" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.Threading" Version="0.8.28" />
       <PackageReference Include="XiHan.Framework.Uow" Version="0.8.28" />
