--- a/backend/src/modules/XiHan.BasicApp.CodeGeneration.Application.Contracts/XiHan.BasicApp.CodeGeneration.Application.Contracts.csproj
+++ b/backend/src/modules/XiHan.BasicApp.CodeGeneration.Application.Contracts/XiHan.BasicApp.CodeGeneration.Application.Contracts.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\XiHan.BasicApp.CodeGeneration.Domain.Shared\XiHan.BasicApp.CodeGeneration.Domain.Shared.csproj" />
+        <ProjectReference Include="..\XiHan.BasicApp.Rbac.Application.Contracts\XiHan.BasicApp.Rbac.Application.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
