--- a/backend/CodeMaid.config
+++ b/backend/CodeMaid.config
@@ -18,6 +18,9 @@
                 serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="Cleaning_AutoCleanupOnFileSave" serializeAs="String">
+                <value>True</value>
+            </setting>
             <setting name="Cleaning_PerformPartialCleanupOnExternal" serializeAs="String">
                 <value>1</value>
             </setting>
