--- a/backend/props/version.props
+++ b/backend/props/version.props
@@ -4,6 +4,6 @@
     <!-- 设置程序集的版本信息 -->
     <AssemblyVersion>2.0.0</AssemblyVersion>
     <FileVersion>2.0.0</FileVersion>
-    <Version>2.0.0-alpha</Version>
+    <Version>2.0.0-alpha.1</Version>
   </PropertyGroup>
 </Project>
