--- a/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
@@ -1,2 +1,23 @@
 {
+  "XiHanSqlSugarCore": {
+    "ConnectionConfigs": [
+      {
+        "ConfigId": "Default",
+        "ConnectionString": "Server=localhost;Database=XiHanDb;User Id=sa;Password=YourPassword;TrustServerCertificate=true;",
+        "DbType": "PostgreSQL",
+        "IsAutoCloseConnection": true,
+        "InitKeyType": "Attribute",
+        "MoreSettings": {
+          "IsAutoRemoveDataCache": true,
+          "IsAutoSyncStructure": false
+        },
+        "SlaveConnectionConfigs": []
+      }
+    ],
+    "EnableSqlLog": true,
+    "EnableDbInitialization": true,
+    "EnableDataSeeding": true,
+    "EntityTypes": [],
+    "GlobalFilters": {}
+  }
 }
