feat: 优化数据库配置

--- a/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
@@ -3,7 +3,7 @@
     "ConnectionConfigs": [
       {
         "ConfigId": "Default",
-        "ConnectionString": "Server=localhost;Database=XiHanDb;User Id=sa;Password=YourPassword;TrustServerCertificate=true;",
+        "ConnectionString": "Server=localhost;Database=postgres;User Id=postgres;Password=123456;TrustServerCertificate=true;",
         "DbType": "PostgreSQL",
         "IsAutoCloseConnection": true,
         "InitKeyType": "Attribute",
