--- a/backend/src/modules/XiHan.BasicApp.Rbac/XiHan.BasicApp.Rbac.csproj
+++ b/backend/src/modules/XiHan.BasicApp.Rbac/XiHan.BasicApp.Rbac.csproj
@@ -18,4 +18,8 @@
       <ProjectReference Include="..\..\framework\XiHan.BasicApp.Web.Core\XiHan.BasicApp.Web.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Options\" />
+    </ItemGroup>
+
 </Project>
