--- a/backend/src/modules/XiHan.BasicApp.CodeGeneration/XiHan.BasicApp.CodeGeneration.csproj
+++ b/backend/src/modules/XiHan.BasicApp.CodeGeneration/XiHan.BasicApp.CodeGeneration.csproj
@@ -17,4 +17,9 @@
       <ProjectReference Include="..\XiHan.BasicApp.Rbac\XiHan.BasicApp.Rbac.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\Domain\" />
+      <Folder Include="Services\Dtos\" />
+    </ItemGroup>
+
 </Project>
