--- a/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
@@ -3,7 +3,7 @@
     "ConnectionConfigs": [
       {
         "ConfigId": "Default",
-        "ConnectionString": "Server=localhost;Database=XiHanBasicApp;User Id=postgres;Password=postgres;TrustServerCertificate=true;",
+        "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User Id=postgres;Password=postgres;TrustServerCertificate=true;",
         "DbType": "PostgreSQL",
         "IsAutoCloseConnection": true,
         "InitKeyType": "Attribute",
