--- a/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
@@ -1,23 +1,34 @@
 {
-  "XiHanSqlSugarCore": {
-    "ConnectionConfigs": [
-      {
-        "ConfigId": "Default",
-        "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User Id=postgres;Password=postgres;TrustServerCertificate=true;",
-        "DbType": "PostgreSQL",
-        "IsAutoCloseConnection": true,
-        "InitKeyType": "Attribute",
-        "MoreSettings": {
-          "IsAutoRemoveDataCache": true,
-          "IsAutoSyncStructure": false
-        },
-        "SlaveConnectionConfigs": []
+  "XiHan": {
+    "Data": {
+      "SqlSugarCore": {
+        "ConnectionConfigs": [
+          {
+            "ConfigId": "Default",
+            "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User Id=postgres;Password=postgres;TrustServerCertificate=true;",
+            "DbType": "PostgreSQL",
+            "IsAutoCloseConnection": true,
+            "InitKeyType": "Attribute",
+            "MoreSettings": {
+              "IsAutoRemoveDataCache": true,
+              "IsAutoSyncStructure": false
+            },
+            "SlaveConnectionConfigs": []
+          }
+        ],
+        "EnableSqlLog": true,
+        "EnableDbInitialization": false,
+        "EnableTableInitialization": false,
+        "EnableDataSeeding": false,
+        "EntityTypes": [],
+        "GlobalFilters": {}
       }
-    ],
-    "EnableSqlLog": true,
-    "EnableDbInitialization": true,
-    "EnableDataSeeding": true,
-    "EntityTypes": [],
-    "GlobalFilters": {}
+    }
+  },
+  "Caching": {
+    "Redis": {
+      "IsEnabled": true,
+      "Configuration": "127.0.0.1:6379"
+    }
   }
 }
