--- a/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
@@ -17,9 +17,9 @@
           }
         ],
         "EnableSqlLog": true,
-        "EnableDbInitialization": false,
-        "EnableTableInitialization": false,
-        "EnableDataSeeding": false,
+        "EnableDbInitialization": true,
+        "EnableTableInitialization": true,
+        "EnableDataSeeding": true,
         "GlobalFilters": {}
       }
     }
