--- a/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
@@ -1,5 +1,13 @@
 {
   "XiHan": {
+    "DistributedIds": {
+      "SnowflakeId": {
+        "WorkerId": 1,
+        "DataCenterId": 1,
+        "BaseTime": "2026-01-01",
+        "SnowflakeIdType": "SnowflakeDriftMethod"
+      }
+    },
     "Data": {
       "SqlSugarCore": {
         "ConnectionConfigs": [
