fix: 密码生成配置

--- a/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
@@ -8,6 +8,23 @@
         "SnowflakeIdType": "SnowflakeDriftMethod"
       }
     },
+    "Authentication": {
+      "PasswordHasher": {
+        "Version": 1,
+        "Iterations": 600000,
+        "SaltSize": 32,
+        "HashSize": 32,
+        "HashAlgorithm": "SHA256"
+      },
+      "Jwt": {
+        "SecretKey": "XiHanFrameworkJwtSecretKey2026SecurePasswordForDevelopment",
+        "Issuer": "XiHan.BasicApp",
+        "Audience": "XiHan.BasicApp.Client",
+        "AccessTokenExpirationMinutes": 120,
+        "RefreshTokenExpirationDays": 7,
+        "ClockSkewMinutes": 5
+      }
+    },
     "Data": {
       "SqlSugarCore": {
         "ConnectionConfigs": [
